--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         left: 0;
         margin:0;
         background-color: white;
+        z-index: 999;
     }
     #criSub
     {
@@ -94,6 +95,7 @@
         display: inline-block;
         vertical-align: top;
         float: right;
+        cursor: pointer;
     }
     .criNum
     {
@@ -206,44 +208,44 @@
 <script>
 $(document).ready(function(){
     $('ul.tabs').tabs();
-    $('.critical').on('click',function(){
-        // event.stopPropagation();
-        $('#criInput').css('display','block');
-        $('#criText').focus();
-        var that=$(this);
-        $('#criSub').one('click',function(){
-            event.stopPropagation();
-            var criVal=$(this).prev().find('input').val();
-            var tpl='姓名:'+criVal;
-            var Item=$('<div class="criItem"></div>').html(tpl);
+    // $('.critical').on('click',function(){
+    //     // event.stopPropagation();
+    //     $('#criInput').css('display','block');
+        // $('#criText').focus();
+        // var that=$(this);
+        // $('#criSub').one('click',function(event){
+        //     event.stopPropagation();
+        //     var criVal=$(this).prev().find('input').val();
+        //     var tpl='姓名:'+criVal;
+        //     var Item=$('<div class="criItem"></div>').html(tpl);
             
-            $.ajax({
-                url: 'http://wq.yangge.ac.cn/app/index.php?i=2&c=entry&do=comment&m=picturewall',
-                type:"POST",
-                dataType:"json",
-                data:{
-                    'openid':window.openid, 
-                    'id':$(this).id,
-                    'comment':tpl
-                },
-                success:function(data)
-                {
-                    alert('评论成功');
-                    that.parent().next().append(Item);
-                },
-                error:function(a,b,c)
-                {
-                  console.log(a+b+c);
-                  alert('评论失败，请重试');
-                }
-              });
-        });
+        //     $.ajax({
+        //         url: 'http://wq.yangge.ac.cn/app/index.php?i=2&c=entry&do=comment&m=picturewall',
+        //         type:"POST",
+        //         dataType:"json",
+        //         data:{
+        //             'openid':window.openid, 
+        //             'id':$(this).id,
+        //             'comment':tpl
+        //         },
+        //         success:function(data)
+        //         {
+        //             alert('评论成功');
+        //             that.parent().next().append(Item);
+        //         },
+        //         error:function(a,b,c)
+        //         {
+        //           console.log(a+b+c);
+        //           alert('评论失败，请重试');
+        //         }
+        //       });
+        // });
     });
-    $(document).on('click',function(event){
-        event.stopPropagation();
-        event.preventDefault();
-        $('#criInput').css('display','none');
-    });
+    // $(document).on('click',function(event){
+    //     event.stopPropagation();
+    //     event.preventDefault();
+    //     $('#criInput').css('display','none');
+    // });
 
 });
 </script>
