--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
         display: block;
         vertical-align: baseline;
         padding:0 20px 0 20px;
+        margin-bottom: 15px;
+
     }
     .critical
     {
@@ -178,7 +180,7 @@
                 <i class="mdi-communication-textsms critical"></i>
             </div>
             <div class="criArea">
-                <span>显示全部评论</span>
+                <span class="criShow">显示全部评论</span>
                 <div class="criItem">
                     姓名:jlskjfal;jgslkgjs看过dkfjal;dkfjal;sdkfjeoinflsfjelirjjfdslakfja;lekjfieojrewasdfasfadfasdfasdfasdfasdfa
                 </div>
@@ -208,45 +210,6 @@
 <script>
 $(document).ready(function(){
     $('ul.tabs').tabs();
-    // $('.critical').on('click',function(){
-    //     // event.stopPropagation();
-    //     $('#criInput').css('display','block');
-        // $('#criText').focus();
-        // var that=$(this);
-        // $('#criSub').one('click',function(event){
-        //     event.stopPropagation();
-        //     var criVal=$(this).prev().find('input').val();
-        //     var tpl='姓名:'+criVal;
-        //     var Item=$('<div class="criItem"></div>').html(tpl);
-            
-        //     $.ajax({
-        //         url: 'http://wq.yangge.ac.cn/app/index.php?i=2&c=entry&do=comment&m=picturewall',
-        //         type:"POST",
-        //         dataType:"json",
-        //         data:{
-        //             'openid':window.openid, 
-        //             'id':$(this).id,
-        //             'comment':tpl
-        //         },
-        //         success:function(data)
-        //         {
-        //             alert('评论成功');
-        //             that.parent().next().append(Item);
-        //         },
-        //         error:function(a,b,c)
-        //         {
-        //           console.log(a+b+c);
-        //           alert('评论失败，请重试');
-        //         }
-        //       });
-        // });
-    // });
-    $(document).on('click',function(event){
-        event.stopPropagation();
-        event.preventDefault();
-        $('#criInput').css('display','none');
-    });
-
 });
 </script>
 </body>
