--- a/index.html
+++ b/index.html
@@ -207,6 +207,11 @@
     </div> 
     <button class="btn col s2" id="criSub">提交</button>
 </div>
+<!-- 底部按钮 -->
+  <div class="fixed-action-btn" style="bottom: 20px; right:20px;">
+     <a class="btn-floating btn-large waves-effect waves-light #ee6e73"><i class="mdi-content-add"></i></a>
+    </a>
+  </div>
 <script>
 $(document).ready(function(){
     $('ul.tabs').tabs();
